[package]
name = "rts_assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
amiquip = "=0.4.2"
bma-benchmark = "0.0.24"
rand = "0.8.5"
serde = "1.0.202"
serde_json = "1.0.117"
criterion = { version = "0.5.1", features = ["html_reports"] }
nom = "7.1.3"

[[bench]]
name = "benchmark"
harness = false
